[gd_scene load_steps=4 format=4 uid="uid://cdnyb8d1qw7g4"]

[ext_resource type="Shader" uid="uid://bi8x813unwm5l" path="res://Asset/Shader/ShaderBright.gdshader" id="1"]
[ext_resource type="Script" uid="uid://cw5snooygbuws" path="res://Prefab/GUI/Button/SpriteBrightButton/SpriteBrightButton.gd" id="2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xnjm"]
shader = ExtResource("1")
shader_parameter/brightStrength = 0.0

[node name="SpriteBrightButton" type="TextureRect"]
light_mask = 0
material = SubResource("ShaderMaterial_0xnjm")
script = ExtResource("2")

[node name="Transform" type="Control" parent="."]
light_mask = 0
anchors_preset = 0
mouse_filter = 1

[node name="Button" type="Button" parent="Transform"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
light_mask = 0
layout_mode = 0
offset_left = -58.0
offset_top = -51.0
offset_right = 58.0
offset_bottom = 51.0
mouse_filter = 1
mouse_default_cursor_shape = 2
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="Transform/Button" to="." method="_MouseEntered"]
[connection signal="mouse_exited" from="Transform/Button" to="." method="_MouseExited"]
[connection signal="pressed" from="Transform/Button" to="." method="_Pressed"]
